Issue #16012: Fix a regression in pyexpat. The parser's UseForeignDTD() method doesn't require an argument again.